[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
name = "proton-eurorack"
version = "0.6.0" # hack/release.sh
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../README.md"
publish = false

[[test]]
name = "display"
harness = false # defined through defmt_test

[[test]]
name = "encoder"
harness = false # defined through defmt_test

[[test]]
name = "cv_input"
harness = false # defined through defmt_test

[[test]]
name = "gate_output"
harness = false # defined through defmt_test

[[test]]
name = "cv_output"
harness = false # defined through defmt_test

[dependencies]
proton-peripherals = { path = "../peripherals" }
proton-ui = { path = "../ui", features = ["defmt"] }
proton-control = { path = "../control", features = ["defmt"] }
proton-instruments-kaseta = { path = "../instruments/kaseta", optional = true }
cortex-m = "0.7"
cortex-m-rtic = "1"
systick-monotonic = "1"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32h7xx-hal = { version = "0.12", features = ["stm32h750v", "rt", "revision_v",] }
daisy = { version = "0.6", features = ["seed"] }
display-interface-spi = "0.4"
ssd1306 = "0.7.0"
fugit = "0.3"
heapless = "0.7"
nb = "1"

[features]
kaseta = ["proton-instruments-kaseta"]

[dev-dependencies]
defmt-test = "0.3"
embedded-graphics = "0.7"

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on flash
opt-level = 3 # test with the same optimization as released code

[profile.test]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on flash
opt-level = 3 # test with the same optimization as released code

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on flash
lto = true # better optimizations
opt-level = 3 # optimize for size

[profile.bench]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on flash
lto = true # better optimizations
opt-level = 3 # optimize for size
