[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
name = "proton-lib"
version = "0.3.0" # hack/release.sh
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../README.md"
publish = false

[dependencies]
micromath = "2"
graphity = "2.0"
embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
hashbrown = "0.12"

[dev-dependencies]
approx = "0.4"
