[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
name = "proton-peripherals"
version = "0.3.0" # hack/release.sh
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../README.md"
publish = false

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
either = { version = "1.6", default-features = false }

[dependencies.defmt]
version  = "0.3"
optional = true

[features]
defmt = ["dep:defmt"]
