[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
name = "proton-primitives"
version = "0.4.0" # hack/release.sh
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../README.md"
publish = false

[dependencies]
micromath = "2"

[dependencies.dasp]
version = "0.11"
default-features = false
features = ["signal", "window"]

[dependencies.defmt]
version  = "0.3"
optional = true

[dev-dependencies]
approx = "0.4"
heapless = "0.7"

[dev-dependencies.microfft]
version = "0.4"
default-features = false
features = ["maxn-1024"]

[features]
defmt = ["dep:defmt"]
