[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
name = "proton-puredata"
version = "0.4.0" # hack/release.sh
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proton-ui = { path = "../ui" }
proton-instruments-karplus-strong-music-box = { path = "../instruments/karplus_strong_music_box" }
pd-sys = "0.1.0"
field-offset = "0.3"
embedded-graphics-simulator = "0.3"
embedded-graphics-core = "0.3"
