[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
name = "proton-instruments-karplus-strong"
version = "0.4.0" # hack/release.sh
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../../README.md"
publish = false

[dependencies]
proton-ui = { path = "../../ui" }
proton-primitives = { path = "../../primitives" }

[dependencies.defmt]
version  = "0.3"
optional = true

[dev-dependencies]
test-case = "1.2"

[features]
defmt = ["dep:defmt", "proton-primitives/defmt"]
