[package]
authors = ["Petr Horáček <hrck@protonmail.com>"]
name = "proton-instruments-tape"
version = "0.5.0" # hack/release.sh
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zlosynth/proton"
readme = "../../README.md"
publish = false

[dependencies]
proton-ui = { path = "../../ui" }
proton-primitives = { path = "../../primitives" }
heapless = "0.7"
libm = "0.2.2"

[dependencies.dasp]
version = "0.11"
default-features = false
features = ["signal", "slice", "ring_buffer"]

[dependencies.defmt]
version  = "0.3"
optional = true

[dev-dependencies]
test-case = "1.2"
approx = "0.4"

[features]
defmt = ["dep:defmt", "proton-primitives/defmt"]
